--- a/app/templates/vikhyat.html
+++ b/app/templates/vikhyat.html
@@ -36,7 +36,7 @@
         </div>
      </div>
   
-        <!-- <div class="navbar navbar-dark bg-dark">
+        <div class="navbar navbar-dark bg-dark">
             <div class="container rt">
                 <div class="row">
                     <div class="col-md-12">
@@ -60,7 +60,7 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
         <br>
         <div>
             <nav aria-label="breadcrumb" id='curlocation'>
@@ -85,7 +85,7 @@
                     <div class='col-4'>
                         <div id='form_container'>
                                     <form class="form" id="search_form">
-                                        <input class="form-control mr-sm-2" id="search_bar" type="search" placeholder="Search" aria-label="Search">
+                                        <input class="form-control mr-sm-2" id="search_bar" type="search" placeholder="Search" onchange="search(this.value)" aria-label="Search">
                                         </input>
                                     </form>
                         </div> 
