--- a/app/templates/property.html
+++ b/app/templates/property.html
@@ -22,7 +22,7 @@
 
     
     
-    <script src={{url_for('static', filename='script.js')}} type="text/javascript"></script>
+    <script src={{url_for('static', filename='script1.js')}} type="text/javascript"></script>
 
 
     <style>  
