--- a/app/templates/nav_bar.html
+++ b/app/templates/nav_bar.html
@@ -20,7 +20,7 @@
           </div>
           <div class="user-nav__nav">
             <span class="user-nav__nav__home" onclick="redirectIt(this)" href={{ url_for('home') }}>Home</span>
-            <span class="user-nav__nav__our-homes" onclick="redirectIt(this)" href={{ url_for('properties') }}>Our Homes</span>
+            <span class="user-nav__nav__our-homes" onclick="redirectIt(this)" href={{ url_for('all_properties') }}>Our Homes</span>
             <span class="user-nav__nav__partner-up">Partner Up</span>
             <span class="user-nav__nav__about-us">About Us</span>
           </div>
