--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,19 +1,37 @@
-<div class="header" id="header">
-    <nav class="user-nav" id="user-nav">
-        <div class="user-nav__company">
-            <div class="user-nav__logo" id="user-nav__logo" onclick="redirectIt(this)" href={{ url_for('home') }}></div>
-            <span class="user-nav__title">
-                <span class="Gold">P L A T I N U M </span>
-                <span class="user-nav__sub-title">L O D G I N G</span>
-            </span>
+<!-- <!DOCTYPE html>
+<html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href={{url_for('static', filename='css/navbar.css')}}> 
+        <script src={{url_for('static', filename='navbar.js')}} type="text/javascript"></script>
+    </head>
+    <body> -->
+        <div id="NV__header" class="NV__header resize orientationchange">
+            <div id="NV__nav__company" class="NV__nav__content NV__nav__company">
+                <div id="NV__logo" class="NV__nav__company__logo"></div>
+                <div class="NV__nav__company__name">
+                    <div class="NV__nav__company__name__first">
+                        PLATINUM
+                    </div>
+                    <div class="NV__nav__company__name__last">
+                        LODGING
+                    </div>
+                </div>
+            </div>
+            <nav id="NV__nav__list" class="NV__nav__content NV__nav__list">
+                <a href={{ url_for('home') }}>Home</a>
+                <a href="/properties">Our Homes</a>
+                <a href="https://form.jotform.com/platinumlodging/platinum-lodging-">Partner Up</a>
+                <a href={{ url_for('home') }}">About Us</a>
+            </nav>
+            <div id="NV__nav__buttons" class="NV__nav__content NV__nav__button">
+            <div id="NV__expand" class="NV__expand-button" onclick="expand()">
+                    <div id="NV__expand1" class="NV__expand-line"></div>
+                    <div id="NV__expand2" class="NV__expand-line"></div>
+                    <div id="NV__expand3" class="NV__expand-line"></div>
+                </div>
+                <a href="https://www.google.com"><div id="NV__contact-button" class="NV__user-button">Contact</div></a>
+            </div>
         </div>
-        <div class="user-nav__nav">
-            <span class="user-nav__nav__home" onclick="redirectIt(this)" href={{ url_for('home') }}>Home</span>
-            <span class="user-nav__nav__our-homes" onclick="redirectIt(this)" href={{ url_for('properties') }}>Our Homes</span>
-            <span class="user-nav__nav__partner-up">Partner Up</span>
-            <span class="user-nav__nav__about-us">About Us</span>
-        </div>
-        <div class="user-nav__contact">Contact</div>
-    </nav>
-</div>
-
+    <!-- </body>
+</html> -->
