--- a/app/templates/property.html
+++ b/app/templates/property.html
@@ -18,7 +18,8 @@
     
     <!--Only for demo purpose - no need to add.-->
     <link rel="stylesheet" href={{url_for('static', filename='css/demo.css')}}> 
-    <link rel="stylesheet" href={{ url_for('static', filename='css/nav_bar1.css')}}> 
+    <link rel="stylesheet" href={{url_for('static', filename='css/navbar.css')}}> 
+    <script src={{url_for('static', filename='navbar.js')}} type="text/javascript"></script>
 
     
     
@@ -82,7 +83,8 @@
 
   
 <!-- actual Content -->
-<div id="root">
+{% include 'navbar.html' %}
+<!-- <div id="root">
   <div class="header" id="header">
      <nav class="user-nav" id="user-nav">
         <div class="user-nav__company">
@@ -91,14 +93,14 @@
         </div>
         <div class="user-nav__nav">
           <a class="user-nav__nav__home" href={{ url_for('home') }}>Home</a>
-          <a class="user-nav__nav__our-homes" href={{ url_for('properties') }}>Our Homes</a>
+          <a class="user-nav__nav__our-homes" href={{ url_for('all_properties') }}>Our Homes</a>
           <a class="user-nav__nav__partner-up">Partner Up</a>
           <a class="user-nav__nav__about-us">About Us</a>
       </div>
         <a class="user-nav__contact" class="a_in_nav">Contact</a>
      </nav>
   </div>
-</div>
+</div> -->
 <br>
 <br>
 <br>
@@ -107,14 +109,14 @@
     	<div class="col-rt-12">
         	<div class="rt-heading">
                            
-            	<h1 id="heading">Villa David Chipperfield Nord</h1>
+            	<h1 id="heading">{{data.title}}</h1>
             
                 <p id="subheading" style="margin-top: 1%; align-items: center; align-content: center;">
                     <svg style="background-color: rgba(0, 0, 0, 0); color: #361500; padding-top: 0.1%;" xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-tag" viewBox="0 0 16 16">
                         <path d="M6 4.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm-1 0a.5.5 0 1 0-1 0 .5.5 0 0 0 1 0z"/>
                         <path d="M2 1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 1 6.586V2a1 1 0 0 1 1-1zm0 5.586 7 7L13.586 9l-7-7H2v4.586z"/>
                       </svg> &nbsp;
-                      Gardone Riviera, Lombardia, Italy 
+                      {{data.state}}, USA
                       <button id="download_btn" class="btn btn-outline-dark "><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
                         <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z" />
                         <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z" />
@@ -131,7 +133,7 @@
     <div class="rt-container">
         
           <div class="col-rt-12">
-            <button onclick="window.location.href='{{ url_for('gridview') }}'" id="see_more_btn" class="btn btn-outline-dark " ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-images" viewBox="0 0 16 16">
+            <button onclick="window.location.href='{{ url_for('gridview',id=data.id) }}'" id="see_more_btn" class="btn btn-outline-dark " ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-images" viewBox="0 0 16 16">
                 <path d="M4.502 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
                 <path d="M14.002 13a2 2 0 0 1-2 2h-10a2 2 0 0 1-2-2V5A2 2 0 0 1 2 3a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v8a2 2 0 0 1-1.998 2zM14 2H4a1 1 0 0 0-1 1h9.002a2 2 0 0 1 2 2v7A1 1 0 0 0 15 11V3a1 1 0 0 0-1-1zM2.002 4a1 1 0 0 0-1 1v8l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094l1.777 1.947V5a1 1 0 0 0-1-1h-10z"/>
               </svg>&nbsp; See More&nbsp; </button>
@@ -179,18 +181,18 @@
 <div className="container" style="margin-top: 2%; margin-left: 10%;">
     <div className="card mt-4">
         <div id="card1" className="card-body">
-            <h2>Luxury stay in Gardone Riviera, Lombardia, Italy</h2>
-            <p>&nbsp; 8 guests . 4 bedrooms . 4 beds . 4.5 bathrooms</p>
+            <h2>Luxury stay in {{data.title}}, {{data.state}}, USA</h2>
+            <p>&nbsp; {{data.guest}} guests . {{data.bedroom}} bedrooms . {{data.bed}} beds . {{data.bathroom}} bathrooms</p>
             <hr class="mt-2 mb-3" />
             <h6>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door-fill" viewBox="0 0 16 16">
                     <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5z" />
                 </svg>
-                &nbsp; Designed by
+                &nbsp; Hosted by
 
             </h6>
             <p>
-                &nbsp;   David Chipperfield
+                &nbsp;   {{data.host}}
             </p>
             <h6>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-bar-graph-fill" viewBox="0 0 16 16">
