--- a/app/templates/vikhyat.html
+++ b/app/templates/vikhyat.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script>
+        var d = {{ data|tojson }};
+      </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,19 +21,20 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <link rel="stylesheet" href={{url_for('static', filename='css/app1.css')}}> 
-    <link rel="stylesheet" href={{url_for('static', filename='css/nav_bar1.css')}}> 
+    <link rel="stylesheet" href={{url_for('static', filename='css/navbar.css')}}> 
+    <script src={{url_for('static', filename='navbar.js')}} type="text/javascript"></script>
     
 </head>
 <body>  
-    <!-- {% include 'nav_bar.html' %} -->
-    <div id="root">
+    {% include 'navbar.html' %}
+    <!-- <div id="root">
         <div class="header" id="header">
            <nav class="user-nav" id="user-nav">
               <div class="user-nav__company">
                  <div class="user-nav__logo" id="user-nav__logo" href={{ url_for('home')}}></div>
                  <span class="user-nav__title"><span class="Gold" href={{ url_for('home') }}>P L A T I N U M </span><span class="user-nav__sub-title">L O D G I N G</span></span>
               </div>
-              <div class="user-nav__nav"><a class="user-nav__nav__home" href={{ url_for('home') }}>Home</a><a class="user-nav__nav__our-homes" href={{ url_for('properties') }}>Our Homes</a><a class="user-nav__nav__partner-up">Partner Up</a><a class="user-nav__nav__about-us">About Us</a></div>
+              <div class="user-nav__nav"><a class="user-nav__nav__home" href={{ url_for('home') }}>Home</a><a class="user-nav__nav__our-homes" href={{ url_for('all_properties') }}>Our Homes</a><a class="user-nav__nav__partner-up">Partner Up</a><a class="user-nav__nav__about-us">About Us</a></div>
               <a class="user-nav__contact" class="a_in_nav">Contact</a>
            </nav>
         </div>
@@ -60,7 +64,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
+        <br/>
+        <br/>
         <br>
         <div>
             <nav aria-label="breadcrumb" id='curlocation'>
